syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";
import "zetacore/common/common.proto";

option go_package = "github.com/zeta-chain/zetacore/x/observer/types";

enum ObservationType {
  option (gogoproto.goproto_enum_stringer) = true;
  EmptyObserverType = 0;
  InBoundTx = 1;
  OutBoundTx = 2;
}

message ObserverMapper {
  string index = 1;
  zetacore.common.Chain  observer_chain =2 ;
  repeated string observer_list =4;
}